# AINextGenC2

./: Cargo.toml  README.md  docker-compose.ldap-ci.yml
.github/workflows/: ci.yml
config/: dcs-accredited.toml  dcs-coalition.toml  fmn-federation.toml  fmn-ldap-entries.toml  fmn-ldap-pip-ci.toml  fmn-ldap-pip.toml  pki.env.example
config/ldap/ci/: Dockerfile
config/ldap/ci/ldif/: 01-fmn-structure.ldif  02-fmn-operators.ldif
config/ldap/ci/schema/: fmn-operator.schema
crates/ainextgenc2/: Cargo.toml
crates/ainextgenc2/examples/: air_defense_radar.rs  allied_c2_sensor_retrieval.rs  coalition_exercise.rs  dcs_cross_domain.rs  mip4_ies_exchange.rs  sitac_simulator.rs
crates/ainextgenc2/src/: lib.rs  main.rs  stack.rs
crates/ainextgenc2/src/scenarios/: air_defense_radar.rs  allied_sensor_retrieval.rs  coalition_exercise.rs  dcs_cross_domain.rs  mod.rs  sitac_simulator.rs  transport_exchange.rs
crates/mim-adatp-conformance/: Cargo.toml
crates/mim-adatp-conformance/fixtures/adatp/: acme-valid-4774.1.xml
crates/mim-adatp-conformance/fixtures/spif/: nato-4774-policy.xml  uk-demo.xml
crates/mim-adatp-conformance/src/: acme.rs  lib.rs  report.rs  runner.rs  vectors.rs  ztdf.rs
crates/mim-audit/: Cargo.toml
crates/mim-audit/src/: chain.rs  lib.rs  log.rs  record.rs  siem.rs  worm.rs
crates/mim-compliance/: Cargo.toml
crates/mim-compliance/src/: checker.rs  lib.rs  report.rs  requirements.rs
crates/mim-core/: Cargo.toml
crates/mim-core/src/: error.rs  lib.rs  nil_reason.rs  representation.rs  semantic_id.rs  uri.rs
crates/mim-crypto/: Cargo.toml
crates/mim-crypto/fixtures/: kas-conformance-rsa.pk8  kas-conformance-rsa.pub.pem  kas-conformance-rsa.spki  nmb-conformance-rsa.pk8  nmb-conformance-rsa.pub.pem  nmb-conformance-rsa.spki
crates/mim-crypto/src/: error.rs  fips_backend.rs  hash.rs  keys.rs  lib.rs  pki.rs  provider.rs  ring_backend.rs  runtime_pki.rs  symmetric.rs
crates/mim-dcs/: Cargo.toml
crates/mim-dcs/src/: config.rs  guard.rs  labeled_exchange.rs  lib.rs  transfer.rs
crates/mim-import/: Cargo.toml
crates/mim-import/src/: fetch.rs  lib.rs  main.rs  mapper.rs  owl.rs
crates/mim-labeling/: Cargo.toml
crates/mim-labeling-compliance/: Cargo.toml
crates/mim-labeling-compliance/src/: checker.rs  lib.rs  report.rs  requirements.rs
crates/mim-labeling/src/: classification.rs  domain.rs  error.rs  label.rs  lib.rs  policy.rs
crates/mim-mip4-conformance/: Cargo.toml
crates/mim-mip4-conformance/fixtures/: README.md  nato-mip4-target.json  nato-mip4-target.jsonld  nato-mip4-target.xml
crates/mim-mip4-conformance/src/: dimension.rs  evaluate.rs  lib.rs  report.rs  runner.rs  vectors.rs
crates/mim-model/: Cargo.toml
crates/mim-model/src/: codelist.rs  lib.rs  manifest.rs  metadata.rs  registry.rs  taxonomy.rs
crates/mim-policy/: Cargo.toml
crates/mim-policy/src/: context.rs  downgrade.rs  error.rs  ldap_pip.rs  lib.rs  live_ldap.rs  pap.rs  pdp.rs  pep.rs  pip.rs  saml_pip.rs  spif_admin.rs  store.rs  subject_directory.rs  subject_resolver.rs
crates/mim-policy/tests/: live_ldap_e2e.rs
crates/mim-runtime/: Cargo.toml
crates/mim-runtime/schemas/: mim-5.1-context.jsonld  mim-exchange.xsd
crates/mim-runtime/src/: instance.rs  instance_schema.rs  jsonld_schema.rs  lib.rs  oid.rs  serialize.rs  validate.rs  xsd.rs
crates/mim-spif/: Cargo.toml
crates/mim-spif/fixtures/: acme-policy.xml  capco-us-policy.xml
crates/mim-spif/schemas/: spif-iso29008-2011.xsd
crates/mim-spif/src/: lib.rs  parser.rs  policy.rs  registry.rs  validator.rs  xsd.rs
crates/mim-stanag4774/: Cargo.toml
crates/mim-stanag4774/fixtures/adatp/: acme-invalid-4774.1.xml  nato-4774-extra-1.nato
crates/mim-stanag4774/schemas/: stanag4774-label.xsd
crates/mim-stanag4774/src/: codec.rs  json.rs  lib.rs  xml.rs  xsd.rs
crates/mim-stanag4778/: Cargo.toml
crates/mim-stanag4778/src/: assertion.rs  bdo.rs  binding.rs  detached.rs  lib.rs  rest_envelope.rs  smtp_header.rs
crates/mim-transport/: Cargo.toml
crates/mim-transport-http/: Cargo.toml
crates/mim-transport-http/fixtures/: test-server.crt  test-server.key
crates/mim-transport-http/src/: federation_client.rs  identity.rs  lib.rs  routes.rs  server.rs  tls.rs
crates/mim-transport-http/tests/: federation_e2e.rs  https_e2e.rs  ldap_identity_e2e.rs  saml_identity_e2e.rs  webhook_e2e.rs
crates/mim-transport/src/: broker.rs  envelope.rs  error.rs  federation.rs  filter.rs  lib.rs  message.rs  persistence.rs  remote.rs  replication.rs  replication_notify.rs  rest.rs  secured.rs  wire.rs
crates/mim-ztdf/: Cargo.toml
crates/mim-ztdf/src/: assertion.rs  kas.rs  lib.rs  manifest.rs  package.rs
docs/: MIP4-IES-FMN-READINESS.md  NATO-STANAG-SYSTEM.md  NATO-STANAG-TECHNOLOGY.md  REMAINING-STUBS-AND-LIMITATIONS.md  SOTA-IMPROVEMENTS.md  STATUS.md
models/: mim-core-5.1.json  mim-full-5.1.json
models/ontology/: JC3IEDM.owl  README.md
scripts/ci/: ldap-e2e.sh
