[workspace]
resolver = "2"
members = [
    "crates/mim-core",
    "crates/mim-model",
    "crates/mim-runtime",
    "crates/mim-compliance",
    "crates/mim-import",
    "crates/mim-labeling",
    "crates/mim-stanag4774",
    "crates/mim-stanag4778",
    "crates/mim-ztdf",
    "crates/mim-dcs",
    "crates/mim-labeling-compliance",
    "crates/mim-adatp-conformance",
    "crates/mim-transport",
    "crates/mim-policy",
    "crates/mim-crypto",
    "crates/mim-spif",
    "crates/mim-audit",
    "crates/mim-transport-http",
    "crates/ainextgenc2",
]
default-members = ["crates/ainextgenc2"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jblestang/AINextGenC2"
rust-version = "1.75"

[workspace.dependencies]
mim-core = { path = "crates/mim-core" }
mim-model = { path = "crates/mim-model" }
mim-runtime = { path = "crates/mim-runtime" }
mim-compliance = { path = "crates/mim-compliance" }
mim-import = { path = "crates/mim-import" }
mim-labeling = { path = "crates/mim-labeling" }
mim-stanag4774 = { path = "crates/mim-stanag4774" }
mim-stanag4778 = { path = "crates/mim-stanag4778" }
mim-ztdf = { path = "crates/mim-ztdf" }
mim-dcs = { path = "crates/mim-dcs" }
mim-labeling-compliance = { path = "crates/mim-labeling-compliance" }
mim-adatp-conformance = { path = "crates/mim-adatp-conformance" }
mim-transport = { path = "crates/mim-transport" }
mim-policy = { path = "crates/mim-policy" }
mim-crypto = { path = "crates/mim-crypto" }
mim-spif = { path = "crates/mim-spif" }
mim-audit = { path = "crates/mim-audit" }
mim-transport-http = { path = "crates/mim-transport-http" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "=1.8.0", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
indexmap = { version = "=2.2.6", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
