[package]
name = "ainextgenc2"
description = "AINextGenC2 — next-generation C4 base on the MIP Information Model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ainextgenc2"
path = "src/lib.rs"

[[bin]]
name = "ainextgenc2"
path = "src/main.rs"

[dependencies]
mim-core = { workspace = true }
mim-model = { workspace = true }
mim-runtime = { workspace = true }
mim-compliance = { workspace = true }
mim-labeling = { workspace = true }
mim-labeling-compliance = { workspace = true }
mim-adatp-conformance = { workspace = true }
mim-mip4-conformance = { workspace = true }
mim-transport = { workspace = true }
mim-policy = { workspace = true }
mim-dcs = { workspace = true }
mim-stanag4774 = { workspace = true }
mim-stanag4778 = { workspace = true }
mim-crypto = { workspace = true }
mim-audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
