[package]
name = "mim-crypto"
description = "Cryptographic provider abstraction for NATO STANAG 4778 NMBS and ZTDF (FIPS-capable)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["fips-validated"]
ring-backend = ["dep:ring"]
# AWS-LC module for AES-GCM/SHA-256/RSA inside the FIPS 140-3 crypto boundary.
fips = ["dep:aws-lc-rs", "aws-lc-rs/non-fips"]
# FIPS 140-3 validated AWS-LC build — requires native toolchain support (cmake, Go).
fips-validated = ["dep:aws-lc-rs", "aws-lc-rs/fips"]

[dependencies]
base64 = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
rsa = "0.8"
sha2 = { workspace = true }
zeroize = "=1.8.2"
base64ct = "=1.6.0"
der = "=0.6.1"
spki = "=0.6.0"
pkcs8 = "=0.9.0"
pkcs1 = "=0.4.1"
signature = "2.2"
ring = { version = "0.17", optional = true }
aws-lc-rs = { version = "1.15", optional = true, default-features = false }
