[package]
name = "mim-dcs"
description = "Data-centric security cross-domain solution for labeled MIM exchanges"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mim-core = { workspace = true }
mim-labeling = { workspace = true }
mim-runtime = { workspace = true }
mim-stanag4774 = { workspace = true }
mim-stanag4778 = { workspace = true }
mim-ztdf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
