[package]
name = "mim-labeling-compliance"
description = "Compliance checker for STANAG 4774/4778, ZTDF, and DCS labeling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mim-core = { workspace = true }
mim-labeling = { workspace = true }
mim-stanag4774 = { workspace = true }
mim-stanag4778 = { workspace = true }
mim-ztdf = { workspace = true }
mim-dcs = { workspace = true }
mim-policy = { workspace = true }
mim-crypto = { workspace = true }
mim-spif = { workspace = true }
mim-audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
