[package]
name = "mim-model"
description = "MIM taxonomy, metadata, code lists, and model registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mim-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
