[package]
name = "mim-policy"
description = "XACML-style policy plane: PIP, PAP/PRP, PDP, and PEP for MIM DCS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mim-core = { workspace = true }
mim-labeling = { workspace = true }
mim-model = { workspace = true }
mim-audit = { workspace = true }
mim-spif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
toml = "0.8"
