[package]
name = "mim-transport"
description = "MIP4-IES transport layer for MIM exchange over REST"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mim-core = { workspace = true }
mim-model = { workspace = true }
mim-runtime = { workspace = true }
mim-policy = { workspace = true }
mim-labeling = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
